force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>This Custom Object is used to provide visibility into the physical locations of Products which is critical to machines (ie. Batteries, compliance, current) as well as Training locations for CPR and other updated Certificates.</description>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>