force-app/main/default/objects/Site__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Site custom object was configured as a Master Detail to the Account Object to allow ARC to keep track of critical information regarding machines (batteries, compliance, current) as well as Training (location for CPR and updated certificates).</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>