force-app/main/default/objects/Site__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Site Address where Product is located.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>