force-app/main/default/objects/Site__c/fields/Site_City__c.field-meta.xml
<CustomField>
    <fullName>Site_City__c</fullName>
    <description>Site Address where Product is located.</description>
    <label>Site City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>