force-app/main/default/objects/Site__c/fields/Site_State__c.field-meta.xml
<CustomField>
    <fullName>Site_State__c</fullName>
    <description>Site Address where Product is located.</description>
    <label>Site State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>