force-app/main/default/objects/Site__c/fields/Site_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Zip_Postal_Code__c</fullName>
    <description>Site Address where Product is located.</description>
    <label>Site Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>